# armagetronad

./: .bzrignore  .cdtproject  .clang-format  .cvsignore  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  AUTHORS  Armagetron.cbp  Armagetron.workspace  CHANGELOG.md  CHANGELOG_FROZEN.md  CMakeLists.txt  DCT.txt  Dedicated.cbp  Dedicated_Visual2003.cbp  Dockerfile  Dockerfile.alpine  FindFTGL.cmake  Makefile.am  Makefile.manual  Makefile.paths  Master.cbp  NEWS  NEWS-BRANCH  NEWS-TODO  README  README-CVS  README-DEVELOPER  README-KDevelop3_0  README-Subversion  SDL.cbp  SDL_image.cbp  SDL_mixer.cbp  ZThread.cbp  accustomdir.m4  acinclude.m4  (+23 more)
config/: .cvsignore  CMakeLists.txt  Makefile.am  aiplayers.cfg.in  astylerc  create_sandbox.lua  default.cfg  flexban_cfg.sh  flexban_hotspotshield_cfg.sh  keys_cursor.cfg  keys_cursor_single.cfg  keys_twohand.cfg  keys_wasd.cfg  keys_zqsd.cfg  master.srv  rc.config.in  sdl2_default.cfg  sdl2_keys_cursor.cfg  sdl2_keys_cursor_single.cfg  serverconfigcache.cfg  settings.cfg  settings_authentication.cfg  settings_client.cfg  settings_dedicated.cfg  settings_visual.cfg  settings_web.cfg  subcultures.srv  uphillbothways.cfg  zonestyle_combined.cfg  zonestyle_flat.cfg  zonestyle_vertical.cfg
config/examples/: breakfast_in_hell.cfg  death_zone.cfg  fortress_soccer.cfg  health_is_wall_length.cfg  settings_pig_sty_ball.cfg  settings_pig_sty_ctf.cfg  settings_pig_sty_ctf_1flag.cfg  settings_pig_sty_htf.cfg  settings_pig_sty_shooting.cfg  single_use_turbo.cfg  teamsumo.cfg
config/sdl1/: default.cfg  keys_cursor.cfg  keys_wasd.cfg  keys_x.cfg
config/sdl2/: default.cfg  keys_cursor.cfg  keys_cursor_single.cfg  keys_wasd.cfg  keys_x.cfg
desktop/: .cvsignore  CMakeLists.txt  Makefile.am  armagetronad-armagetronad-handler.desktop.in  armagetronad-armagetronad.desktop.in  armagetronad-link.xml.in  armagetronad.appdata.xml.in  armagetronad.desktop.in  armagetronad.protocol.in
desktop/os-x/: Info.plist.in  build_bundle.sh.in  configure_for_bundle.sh  entrypoint.sh.in
language/: .cvsignore  CMakeLists.txt  american.txt  british.txt  deutsch.txt  english_base.txt  english_base_notranslate.txt  french.txt  languages.txt.in  new.txt  polish.txt  polish_transliterated.txt  portugese.txt  russian.txt  spanish.txt  update.py
resource/: .cvsignore  CMakeLists.txt  Makefile.am
resource/proto/: cockpit-0.3.0.dtd  cockpit-0.3.1-a.dtd  cockpit.dtd  map-0.2.8_beta3.dtd  map-0.3.1-a.dtd  map-0.3.1-b.dtd  map-0.3.1-c.dtd  map.dtd  resource.dtd  spinning_square.aamap.xml
src/engine/: CMakeLists.txt  eAdvWall.cpp  eAdvWall.h  eAuthentication.h  eAuthentification.cpp  eAxis.cpp  eAxis.h  eBannedWords.cpp  eBannedWords.h  eCamera.cpp  eCamera.h  eChat.cpp  eChat.h  eCoord.h  eDebugLine.cpp  eDebugLine.h  eDisplay.cpp  eEventNotification.cpp  eEventNotification.h  eFloor.cpp  eFloor.h  eGameObject.cpp  eGameObject.h  eGrid.cpp  eGrid.h  eKrawall.cpp  eKrawall.h  eLadderLog.cpp  eLadderLog.h  eLagCompensation.cpp  eLagCompensation.h  eNetGameObject.cpp  eNetGameObject.h  ePath.cpp  ePath.h  ePlayer.cpp  ePlayer.h  eRectangle.cpp  eRectangle.h  eSensor.cpp  (+19 more)
src/network/: .cvsignore  CMakeLists.txt  astat.cpp  l2_demo.cpp  l3_demo.cpp  master.cpp  md5.cpp  md5.h  nAuthentication.cpp  nAuthentication.h  nAuthentification.cpp  nAuthentification.h  nBinary.cpp  nBinary.h  nConfig.cpp  nConfig.h  nKrawall.cpp  nKrawall.h  nKrawallPrivate.cpp  nNetObject.cpp  nNetObject.h  nNetwork.cpp  nNetwork.h  nObserver.cpp  nObserver.h  nPriorizing.cpp  nPriorizing.h  nProtoBuf.cpp  nProtoBuf.h  nProtoBufForward.h  nProtocolBuffer.cpp  nProtocolBuffer.h  nServerInfo.cpp  nServerInfo.h  nSimulatePing.h  nSocket.cpp  nSocket.h  nSpamProtection.cpp  nSpamProtection.h  nStreamMessage.cpp  (+3 more)
src/protobuf/: CMakeLists.txt  Makefile.am  eEventNotification.proto  eLagCompensation.proto  eNetGameObject.proto  ePlayer.proto  eTeam.proto  eTimer.proto  eVoter.proto  gAIBase.proto  gCycle.proto  gGame.proto  gWall.proto  gZone.proto  nAuthentication.proto  nConfig.proto  nNetObject.proto  nNetObjectPrivate.proto  nNetwork.proto  nServerInfo.proto  prototype.proto  tColor.proto  tCoord.proto  tFunction.proto  tPolynomial.proto  zShape.proto  zZone.proto
src/render/: CMakeLists.txt  rColor.h  rConsole.cpp  rConsole.h  rConsoleCout.cpp  rConsoleGraph.cpp  rDisplayList.cpp  rDisplayList.h  rFont.cpp  rFont.h  rGL.cpp  rGL.h  rGLEW.h  rGLRender.cpp  rGLuintObject.cpp  rGLuintObject.h  rGradient.cpp  rGradient.h  rModel.cpp  rModel.h  rRender.cpp  rRender.h  rSDL.h  rScreen.cpp  rScreen.h  rSysdep.cpp  rSysdep.h  rTexture.cpp  rTexture.h  rTextureRenderTarget.cpp  rTextureRenderTarget.h  rViewport.cpp  rViewport.h  testgl.cpp
src/swig/: Makefile.am
src/test/: Makefile.am  chat_prefix_test.cpp
src/tools/: CMakeLists.txt  md5.cpp  md5.h  memtest.cpp  pthread-binding.h  tArray.cpp  tArray.h  tAutoDeque.h  tBackgroundProcess.h  tBannedWords.cpp  tBannedWords.h  tCallback.cpp  tCallback.h  tCallbackString.h  tColor.cpp  tColor.h  tCommandLine.cpp  tCommandLine.h  tConfiguration.cpp  tConfiguration.h  tConsole.cpp  tConsole.h  tCoord.cpp  tCoord.h  tCrypt.cpp  tCrypt.h  tCrypto.cpp  tCrypto.h  tDecorator.cpp  tDecorator.h  tDict.h  tDirectories.cpp  tDirectories.h  tError.cpp  tError.h  tEventQueue.cpp  tEventQueue.h  tException.cpp  tException.h  tFunction.cpp  (+70 more)
src/tron/: .cvsignore  CMakeLists.txt  gAIBase.cpp  gAIBase.h  gAICharacter.cpp  gAICharacter.h  gAIIdle.cpp  gAIIdle.h  gAINavigator.cpp  gAINavigator.h  gArena.cpp  gArena.h  gArmagetron.cpp  gCamera.cpp  gCamera.h  gClient.cpp  gCommandLineJumpStart.cpp  gCommandLineJumpStart.h  gCycle.cpp  gCycle.h  gCycleMovement.cpp  gCycleMovement.h  gDedicated.cpp  gExplosion.cpp  gExplosion.h  gFloor.cpp  gFriends.cpp  gFriends.h  gGame.cpp  gGame.h  gHud.cpp  gHud.h  gHudMap.cpp  gHudMap.h  gJoystick.cpp  gJoystick.h  gLanguageMenu.cpp  gLanguageMenu.h  gLogo.cpp  gLogo.h  (+46 more)
src/ui/: CMakeLists.txt  uInput.cpp  uInput.h  uInputQueue.cpp  uInputQueue.h  uMenu.cpp  uMenu.h  uOSXPaste.cpp  uOSXPaste.h  (+2 more)
(+543 files in other folders)
